--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,12 @@ services:
       - 3001:3001
     environment:
       DB_URL: mongodb://db/vidly
+    # volumes:
+    #   - ./backend:/app
   db:
     image: mongo:4.0-xenial
     ports:
-      - 27107:27107
+      - 27017:27017
     volumes:
       - vidly:/data/db
 volumes:
